# auto-algo-opt

./: .gitattributes  .gitignore  HANDOFF_EOH-RAG.md  HANDOFF_Q3_CROSS.md  README.md  go.mod  pyproject.toml  requirements-official-eoh.txt  requirements.txt  run_q3.sh
Agent_EOH/: README.md
docs/: CODE_QUALITY_REVIEW.md  DATA_ANALYSIS_PLAN.md  ISOLATION.md  RAG_PAPERS_2026_ANALYSIS.md  TRD_bp_interpretability.md  eoh-605-analysis-review.md  reproducibility.md  strategy_feature_inventory.json  strategy_feature_inventory.md
eoh_rag/: __init__.py  memory.py  store.py  strategy_router.py
eoh_rag_workspace/: candidate_registry.json
go_solver/: main.go  routing.go
official_eoh/: README.md
scripts/: analyze_bp_scale_proxy.py  analyze_inherited_pool_control.py  analyze_m3_operator_screen.py  analyze_m3_tsp_confirmation.py  analyze_q3_fused_confirmation.py  analyze_q3_mechanism_discovery.py  analyze_tsp_functional_diversity.py  analyze_tsp_pair_fallback_router.py  analyze_tsp_route_behaviors.py  audit_tsp_direct_scale_probe.py  audit_tsp_history_scalability.py  audit_tsp_runtime_probe_cascade.py  audit_tsp_runtime_probe_frontier.py  audit_tsp_safe_pool_functional_redundancy.py  build_tsp_safe_pool_frontier.py  compare_tsp_matched_local_repair.py  confirm_tsp_frontier_archive.py  confirm_tsp_or_opt_2_external.py  confirm_tsp_quality_portfolio_high_scale.py  confirm_tsp_restricted_three_opt_external.py  confirm_tsp_scale_archive.py  evaluate_bp_generalization.py  evaluate_bp_hifo_generalization.py  evaluate_tsp_archive_core12.py  evaluate_tsp_high_scale_diverse_archive.py  (+22 more)
(+718 files in other folders)
